# frac-blp

./: 404.html  Makefile  README.md  artificial_regressors.html  example_frac_nodemog.html  frac_classes.html  frac_nodemog.html  frac_utils.html  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  simulate_frac_nodemog_data.html  sitemap.xml
.github/: main.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: on-release-main.yml
docs/: artificial_regressors.md  example_frac_nodemog.md  frac_classes.md  frac_nodemog.md  frac_utils.md  index.md  simulate_frac_nodemog_data.md
frac_blp/: frac_classes.py  frac_nodemog.py  frac_utils.py  simulate_frac_nodemog_data.py
frac_blp/examples/: example_frac_nodemog.py
search/: search_index.json
